--- a/cfg/sourcemod/leader.cfg
+++ b/cfg/sourcemod/leader.cfg
@@ -32,9 +32,19 @@ sm_leader_follow_vmt "materials/sg/sgfollow.vmt"
 // Default: "materials/sg/sgfollow.vtf"
 sm_leader_follow_vtf "materials/sg/sgfollow.vtf"
 
-// Leader Version
+// Determines maximum number of markers. Max 20
 // -
-// Default: "2.9"
-sm_leader_version "2.9"
+// Default: "5"
+sm_leader_max_markers "5"
+
+// Determines whether players can vote for remove leaders.
+// -
+// Default: "1"
+sm_leader_remove_leader_votes "1"
+
+// Determine whether to remove the leader at the end of the round.
+// -
+// Default: "1"
+sm_leader_roundend_rleader "0"
 
 
