--- a/cfg/sourcemod/leader.cfg
+++ b/cfg/sourcemod/leader.cfg
@@ -45,6 +45,11 @@ sm_leader_remove_leader_votes "1"
 // Determine whether to remove the leader at the end of the round.
 // -
 // Default: "1"
-sm_leader_roundend_rleader "0"
+sm_leader_roundend_rleader "1"
+
+// Determine how long the players were speechless after applying the Mute All (Avoid cheating leader).
+// -
+// Default: "15.0"
+sm_leader_timer_removemute "15.0"
 
 
