--- a/cfg/sourcemod/leader.cfg
+++ b/cfg/sourcemod/leader.cfg
@@ -32,6 +32,16 @@ sm_leader_follow_vmt "materials/sg/sgfollow.vmt"
 // Default: "materials/sg/sgfollow.vtf"
 sm_leader_follow_vtf "materials/sg/sgfollow.vtf"
 
+// The zombie spawn .vmt file
+// -
+// Default: "materials/sg/sgspawn.vmt"
+sm_leader_spawn_vmt "materials/sg/sgspawn.vmt"
+
+// The zombie spawn .vtf file
+// -
+// Default: "materials/sg/sgspawn.vtf"
+sm_leader_spawn_vtf "materials/sg/sgspawn.vtf"
+
 // Determines maximum number of markers. Max 20
 // -
 // Default: "5"
